<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2012-2017 Arne Schwabe
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->

<resources>

    <string name="app_name">OpenVPN Remote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="permission_description">Allows another app to control OpenVPN</string>
    <string name="no_status_yet">No Status yet</string>
    <string name="no_now">Not now</string>
    <string name="show_my_ip">Show my IP</string>
    <string name="disconnect">Disconnect</string>
    <string name="set_default">Set Default</string>
    <string name="start_embedded">Start embedded profile</string>
    <string name="addNew">Add new Profile</string>
    <string name="addNewEdit">Add editable profile</string>
    <string name="start_profile_after_adding">Start profile after adding</string>


</resources>
