<!--
  ~ Copyright (c) 2012-2017 Arne Schwabe
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.blinkt.openvpn.remote.MainFragment">


        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/helloworld"
            android:layout_alignParentTop="true"
            android:text="@string/no_status_yet" />

        <Button
            android:id="@+id/startVPN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/helloworld"
            android:layout_below="@+id/helloworld"
            android:text="@string/no_now"
            android:visibility="visible" />

    <TextView
            android:id="@+id/helloworld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/hello_world" />

        <TextView
            android:id="@+id/MyIpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/helloworld"
            android:layout_alignParentLeft="true"
            tools:text="TextView" />

    <Button
            android:id="@+id/getMyIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startVPN"
            android:layout_alignParentLeft="true"
            android:text="@string/show_my_ip" />

        <Button
            android:id="@+id/disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/startVPN"
            android:layout_toRightOf="@+id/startVPN"
            android:text="@string/disconnect" />

    <Button
            android:id="@+id/setDefaultProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/disconnect"
            android:layout_toRightOf="@+id/disconnect"
            android:text="@string/set_default" />

    <Button
            android:id="@+id/startembedded"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/getMyIP"
            android:layout_alignParentLeft="true"
            android:text="@string/start_embedded" />

    <Button
            android:id="@+id/addNewProfile"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/startembedded"
            android:layout_toEndOf="@+id/startembedded"
            android:layout_toRightOf="@+id/startembedded"
            android:text="@string/addNew" />

    <Button
            android:id="@+id/addNewProfileEdit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/addNewProfile"
            android:layout_toEndOf="@+id/addNewProfile"
            android:layout_toRightOf="@+id/addNewProfile"
            android:text="@string/addNewEdit" />

    <CheckBox
            android:id="@+id/startafterAdding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startembedded"
            android:layout_marginTop="4dp"
            android:text="@string/start_profile_after_adding" />

</RelativeLayout>
